fix(compiler): add java-8 compliant reader